--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,5 +20,5 @@ jobs:
             git fetch origin
             git reset --hard origin/deploy
             cd ../..
-            hugo
+            hugo --verbose
             EOF
